--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,5 @@
 title: Sampad Banik
+logo: images/profile picture.JPG
+description: text below image
+show_downloads: true
 theme: jekyll-theme-minimal
