--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sampad Banik
 logo: images/profile picture.JPG
-#description: text below image
+description: sbanik@cs.utah.edu
 #show_downloads: true
 theme: jekyll-theme-minimal
