--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sampad Banik
-description: E-mail: sbanik@cs.utah.edu
+description: sbanik@cs.utah.edu
 logo: images/profile picture.JPG
 #show_downloads: true
 theme: jekyll-theme-minimal
